finished lab 12 added bar chart to my page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <img id="middle" src="" alt="">
       <img id="right" src="" alt="">
     </section>
-
+    <canvas id="products-chart"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
   
- 
   
